excuse generator terminado

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <div class="container-fluid text-center">
       <h1 class="mt-5 p-5">OMG! You will not believe me...</h1>
       <h3 id="excuse">My dog eat my homework</h3>
+      <button id="btn" class="mt-4">Generate a new excuse</button>
     </div>
   </body>
 </html>
